Fixed an issue with the properties editing drop down causing property below it to align funky

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -855,7 +855,8 @@ h1.card-short-description {
 
 .drop-list-panel
 {
-  float: left;
+  	float: left;
+  	height: 20px;
 }
 .drop-list-panel input
 {
